# zpr-learningapp

./: .clang-format  .gitignore  CMakeLists.txt  README.md
gui/: MainWindow.cc  MainWindow.h
src/: CMakeLists.txt  Main.cc  resources.qrc
src/core/: Card.cc  Card.h  LearningSession.cc  LearningSession.h  StudySet.h
src/core/learning/: Card.cc  Card.h  CardTypes.h  LearningSession.cc  LearningSession.h  StudySet.h  SuperMemo.cc  SuperMemo.h
src/core/learning/strategies/: ICardSelectionStrategy.h  SelectionStrategies.h
src/core/utils/: LanguageManager.cc  LanguageManager.h  Overloaded.h  SetExporter.cc  SetExporter.h  SetImporter.cc  SetImporter.h  StyleLoader.cc  StyleLoader.h
src/core/utils/exporters/: IExportStrategy.h  ZipExportStrategy.cc  ZipExportStrategy.h
src/core/utils/importers/: IImportStrategy.h  JsonImportStrategy.cc  JsonImportStrategy.h  ZipImportStrategy.cc  ZipImportStrategy.h
src/db/: DatabaseManager.cc  DatabaseManager.h
src/gui/: MainWindow.cc  MainWindow.h  ViewFactory.cc  ViewFactory.h
src/gui/overlays/: AddCardOverlay.cc  AddCardOverlay.h  CardPreviewOverlay.cc  CardPreviewOverlay.h  OverlayContainer.cc  OverlayContainer.h
src/gui/views/: AddSetView.cc  AddSetView.h  HomeView.cc  HomeView.h  LearningView.cc  LearningView.h  SetView.cc  SetView.h  SetsView.cc  SetsView.h  SettingsView.cc  SettingsView.h  ViewFactory.cc  ViewFactory.h  ViewType.h
src/resources/: AddSetView.qss  Global.qss  MainWindow.qss  SetView.qss  SetsView.qss
src/resources/overlays/: AddCardOverlay.qss  CardPreviewOverlay.qss
src/resources/views/: AddSetView.qss  HomeView.qss  LearningView.qss  SetView.qss  SetsView.qss  SettingsView.qss
src/translations/: learningapp_pl.qm  learningapp_pl.ts
tests/: CMakeLists.txt  CoreTests.cc
tests/src/: CardTests.cc  LearningSessionTests.cc
tests/src/core/learning/: CardTests.cc  LearningSessionTests.cc  StrategiesTests.cc
tests/src/core/utils/: ImporterExporterTests.cc  LanguageManagerTests.cc  StyleLoaderTests.cc
tests/src/db/: DatabaseManagerTests.cc
